tests/baselines/reference/sideEffectImports2(noimplicitany=true,resolvesideeffectimports=true).errors.txt
index.ts(1,8): error TS7016: Could not find a declaration file for module 'source-map-support/register'. 'node_modules/source-map-support/register.js' implicitly has an 'any' type.


==== tsconfig.json (0 errors) ====
    {
        "include": ["index.ts"],
    }
    
==== index.ts (1 errors) ====
    import "source-map-support/register";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module 'source-map-support/register'. 'node_modules/source-map-support/register.js' implicitly has an 'any' type.
    
==== node_modules/source-map-support/register.js (0 errors) ====
    module.exports = {};
    